Updating Apache2 config

--- a/apache2-opensips.conf
+++ b/apache2-opensips.conf
@@ -1,8 +1,18 @@
+NameVirtualHost *:80
+NameVirtualHost *:443
+
+<VirtualHost *:80>
+        ServerName localhost
+        DocumentRoot /var/www/opensips/web
+        ErrorLog /var/log/apache2/error.log
+        CustomLog /var/log/apache2/access.log combined
+</VirtualHost>
+
 <IfModule mod_ssl.c>
-	<VirtualHost _default_:443>
+	<VirtualHost *:443>
 		ServerAdmin webmaster@localhost
 
-		DocumentRoot /var/www/html
+		DocumentRoot /var/www/opensips-cp/web
 
 		ErrorLog ${APACHE_LOG_DIR}/error.log
 		CustomLog ${APACHE_LOG_DIR}/access.log combined
